2007-07-31  Lillian Angel  <langel@redhat.com>

	* NEWS: Updated.

2007-07-31  Francis Kung  <fkung@redhat.com>

	* NEWS: Updated.

2007-07-31  Francis Kung  <fkung@redhat.com>

	PR 37
	* patches/icedtea-graphics.patch: Roll back XPanelPeer change to fix
	x86_64 window decorations.

2007-07-30  Francis Kung  <fkung@redhat.com>

	PR 54
	* rt/gnu/java/awt/QuadSegment.java: Add null check.

2007-07-30  Francis Kung  <fkung@redhat.com>

	PR 41
	* patches/icedtea-fonts.patch: Add support for rotation, shear in
	font transforms.

2007-07-26  Francis Kung  <fkung@redhat.com>

	PR 48
	* patches/icedtea-fonts.patch: Add fallback for font loading.

2007-07-25  Francis Kung  <fkung@redhat.com>

	PR 42
	* patches/icedtea-fonts.patch: Fix scanlines for mono fonts.

2007-07-25  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Added new patch files.
	* Makefile.in: Regenerated.
	* patches/icedtea-graphics.patch: Split off into separate patch files.
	* patches/icedtea-antialias.patch: New file.
	* patches/icedtea-fonts.patch: New file.
	* patches/icedtea-paths.patch: New file.

2007-07-25  Francis Kung  <fkung@redhat.com>

	PR 52
	* patches/icedtea-graphics.patch: Update field names in native image
	JNI code.
	* rt/java/awt/image/ComponentSampleModel.java: Initialize native IDs.
	* rt/java/awt/image/Raster.java: Likewise.
	* rt/java/awt/image/SampleModel.java: Likewise.
	* rt/java/awt/image/SinglePixelPackedSampleModel.java: Likewise, and
	add maxBitSize field..

2007-07-25  Lillian Angel  <langel@redhat.com>

	* jce/gnu/javax/crypto/jce/cipher/PBE.java
	(genParams): Cleaned up hardcoded values.

2007-07-25  Francis Kung  <fkung@redhat.com>

	PR 47
	* rt/java/awt/color/ColorSpace.java: Set static fields in CMSManager.

2007-07-25  Francis Kung  <fkung@redhat.com>

	* INSTALL: Document Freetype requirement.

2007-07-25  Lillian Angel  <langel@redhat.com>

	* jce/gnu/javax/crypto/jce/GnuCrypto.java: Added
	AlgorithmParameters.PBEWithMD5AndDES.
	* AUTHORS: Added Raif Naffah.
